# OBD-II-Dashboard-Simulator

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.old
components/ssd1306/: CMakeLists.txt  ssd1306.h  ssd1306_spi.c
main/: CMakeLists.txt  config.hpp  display.cpp  display.hpp  main.cpp  sensors.cpp  sensors.hpp
